remove footer top padding to fix issue cutting of social links on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,7 @@ a {
 /*-- Footer --*/
 
 footer {
-    padding-top: 50px;
-    padding-bottom: 30px;
+    max-height: 100px;
     background: #036666;
 }
 
